# parse_tg

./: .gitignore  Makefile  README.md  config.py  main.py  prompt.py  pyproject.toml  ruff.toml
clients/: async_dpseek_client.py  tg_client.py
schemas/: extract_prompt.py  job_schemas.py
utils/: json_tools.py  logger.py  save_to.py  vacancy_filter.py
